(TaskView) add custom dialog for selecting assignee

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="descriptionDescription">Description of a task</string>
     <string name="addTag">New Tag</string>
     <string name="addSubtask">New subtask</string>
+    <string name="userListTitle">Select assignee</string>
 </resources>
