--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="endDateHint">Date</string>
     <string name="endTimeHint">Time</string>
     <string name="descriptionLabel">Description</string>
-    <string name="descriptionHint">Add more details...</string>
+    <string name="descriptionHint">Add more details…</string>
     <string name="subtasksLabel">Subtasks</string>
     <string name="tagsLabel">Tags</string>
     <string name="userImageDescription">User avatar</string>
