--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="previewLabel">Preview:</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+    <string name="add">Add</string>
     <string name="confirm">Confirm</string>
     <string name="tagColor">tag color</string>
     <string name="tagColorPicker">Tag color</string>
