(TaskView) add custom dialog for selecting section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="addSubtask">New subtask</string>
     <string name="userListTitle">Select assignee</string>
     <string name="tagListTitle">Select tag</string>
+    <string name="sectionListTitle">Select section</string>
 </resources>
