--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="monthLabel">Month</string>
     <string name="sectionsLabel">Sections</string>
     <string name="noneLabel">None</string>
+    <string name="weekLabel">Week</string>
     <string name="fab_description">Add element</string>
     <string name="fold_section">Fold section</string>
     <string name="assignee_avatar">Assignee avatar</string>
@@ -44,4 +45,5 @@
         <item quantity="one">(%d task)</item>
         <item quantity="other">(%d tasks)</item>
     </plurals>
+
 </resources>
