(CalendarWeekView) Change WeekView into fragment. Add WeekView to MainView. Bump minimum sdk version to 26.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="listLabel">List</string>
     <string name="monthLabel">Month</string>
     <string name="noneLabel">?</string>
+    <string name="weekLabel">Week</string>
 </resources>
